[package]
name = "eco"
version = "0.1.0"
authors = ["migue07mx <migue07mx@protonmail.com>"]
edition = '2021'
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = { version = "1.6" }
plotters = { version = "0.3.6", default-features = false, features = ["bitmap_backend", "surface_series", "fontconfig-dlopen", "ttf", "area_series", "full_palette", "line_series"] }

[build-dependencies]
slint-build = "1.6"

[profile.release]
codegen-units = 1
lto = "fat" 
panic = "abort"
